โครงสร้างระบบบันทึกค่าใช้จ่ายรายวัน

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <title>ระบบบันทึกค่าใช้จ่ายรายวัน</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-green-500">
-    Hello world!
-  </h1>
+<body class="bg-gray-100 p-6">
+  <div class="max-w-2xl mx-auto bg-white p-6 rounded-lg shadow-lg">
+      <h2 class="text-xl font-bold mb-4">บันทึกค่าใช้จ่าย</h2>
 </body>
 </html>
