--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <script src="script.js" defer></script>
   <title>ระบบบันทึกค่าใช้จ่ายรายวัน</title>
 </head>
 <body class="bg-gray-100 p-6">
